--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <title>Aquí iría el título de la página<</title>
         <p>Esto es un párrafo</p>
+        <p>Esto es un segundo párrafo</p>
 </body>
 </html>
