Agregando hoja de estilos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    
+<style href = "miestilo.css">
 <body>
     <title>Aquí iría el título de la página<</title>
         <p>Esto es un párrafo</p>
